modules/gdscript/tests/scripts/parser/errors/variadic_func_rest_after_rest.gd
func f(...args, ...more_args):
	pass

func test():
	pass
